basic page sections

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Verena Mueller</title>
-</head>
-<body>
-<h1>Welcome to Verena's portfolio</h1>
-
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Verena Mueller</title>
+  </head>
+  <body>
+    <h1>Welcome to Verena's portfolio</h1>
+    <!-- Navbar -->
+    <div id="navbar">
+    </div>
+    <!-- Main -->
+    <div id="main">
+      <div id="intro"></div>
+      <section id="about"></section>
+      <section id="skills"></section>
+      <section id="projects"></section>
+      <section id="experiments"></section>
+      <section id="contact"></section>
+      <div id="social"></div>
+      <div id="cv"></div>
+    </div>
+    <!-- Footer -->
+    <div id="footer">
+    </div>
+  </body>
 </html>
