added meta tags for responsive design, Facebook and LinkedIn, fontawesome and bootstrap

--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <!-- enable responsive design-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Verena Mueller | Full-Stack Developer">
+    <!-- Facebook and LinkedInproperties-->
+    <meta property="og:title" content="Le Wagon - The French innovative coding school">
+    <meta property="og:image" content="facebook-preview.jpg">
+    <meta property="og:description" content="Following my curiosity about the interaction of design and technology their power and impact, I found my passion in web development.">
+    <meta property="og:site_name" content="Verena Mueller | Full-Stack Developer"/>
+    <meta property="og:url" content="https://vronski13.github.io/portfolio/" />
+
+    <!-- include fontawesome, bootstrap and -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <title>Verena Mueller</title>
   </head>
   <body>
